Containe duplicate problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.ejs": "html",
-        "iostream": "cpp"
-    }
+        "iostream": "cpp",
+        "typeinfo": "cpp"
+    },
+    "github.copilot.nextEditSuggestions.enabled": false
 }
